@@ -1,0 +1,3 @@
+<?php
+    $icon_themes[] = array('NAME'=>'Default','PATH'=> 'default');
+?>
