@@ -1,0 +1,17 @@
+<?php
+
+/**
+ * index.php -- Displays the main frameset
+ *
+ * Copyright (c) 1999-2003 The SquirrelMail Project Team
+ * Licensed under the GNU GPL. For full terms see the file COPYING.
+ *
+ * Redirects to the login page.
+ *
+ * $Id$
+ */
+
+header("Location: src/login.php\n\n");
+
+?>
+<html></html>
