@@ -1,0 +1,3 @@
+<?php
+    $icon_themes[] = array('NAME'=>'None','PATH'=> 'none');
+?>
