@@ -1,0 +1,14 @@
+<?php
+/**
+ ** index.php
+ **
+ ** This file simply takes any attempt to view source files
+ ** and sends those people to the login screen. At this
+ ** point no attempt is made to see if the person is logged
+ ** or not.
+ **/
+
+header("Location:../index.php");
+
+/** pretty impressive huh? **/
+?>
